# home-catalog

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  hello.py  manage.py  pyproject.toml  pytest.ini  requirements.txt  ses.vim  test
ansible/: push.yaml
catalog/: admin.py  api_views.py  context_processors.py  middleware.py  models.py  serializers.py  tests.py  urls.py  views.py
catalog/fixtures/: test_data.json
catalog/management/commands/: build.py  compile.py  deploy.py  dev.py  docker.py  format.py  test_coverage.py
catalog/migrations/: 0001_initial.py  0002_alter_catalogitem_count.py  0003_alter_catalogitem_count_alter_catalogitem_name_and_more.py  0004_itemgroup_alter_catalogitem_options_and_more.py  0005_alter_catalogitem_options_alter_itemgroup_options_and_more.py  0006_alter_catalogitem_catalog_group.py  0007_alter_cataloggroup_options_catalogitem_slug_and_more.py  0008_alter_catalogitem_pub_date_cataloggroupinvitation.py  0009_alter_cataloggroup_options_alter_catalogitem_options_and_more.py  0010_migrate_catalog_data.py  0011_fix_duplicate_itemgroups.py  0012_alter_itemgroup_slug_alter_itemgroup_title.py
catalog/static/catalog/: style.css
catalog/tests/: test_api_views.py  test_factories.py  test_invitations.py  test_mixins.py  test_models.py  test_views.py
frontend/: api.ts  app.ts  appType.ts  const.ts  index.ts
frontend/select/: clearable-input.ts  options-dropdown.ts  select.ts
frontend/utils/: assert.ts  bind.ts  dom.ts  memo.ts  observer.ts  random.ts
home_catalog/: asgi.py  settings.py  test_settings.py  urls.py  wsgi.py
(+9 files in other folders)
